--- a/main sc.html
+++ b/main sc.html
@@ -586,7 +586,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed & Developed By Prisha Basak
+                    Made With ♥️ By Prisha Basak
                 </div>
             </div>
         </div>
